--- a/src/librarySystemcodes/InfoDialog.form
+++ b/src/librarySystemcodes/InfoDialog.form
@@ -109,9 +109,9 @@
         <DimensionLayout dim="1">
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" alignment="0" attributes="0">
-                  <Component id="jScrollPane1" min="-2" pref="217" max="-2" attributes="0"/>
+                  <Component id="jScrollPane1" pref="248" max="32767" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
-                  <Component id="btnExit" pref="28" max="32767" attributes="0"/>
+                  <Component id="btnExit" min="-2" pref="28" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
               </Group>
           </Group>
@@ -136,7 +136,7 @@
                   <Font name="Yu Gothic UI" size="12" style="0"/>
                 </Property>
                 <Property name="rows" type="int" value="5"/>
-                <Property name="text" type="java.lang.String" value="                Welcome to information dialog on Schedules and Notes&#xa;             Schedules&#xa;             This helps you create your own personal or library related&#xa;             schedules based on time and date.&#xa;             Scedules can only be seen by you and no any other user&#xa;             of the system.&#xa;&#xa;              Notes&#xa;              These are notes or points you wish to reach to the entire&#xa;              system users. they may be book suggestions, meetings&#xa;              or any other relevant points to other users that may be&#xa;              deemed as from not important or very urgent."/>
+                <Property name="text" type="java.lang.String" value="             Welcome to information dialog on Schedules and Notes&#xa;            ........................................................................................................&#xa;             Schedules&#xa;             This helps you create your own personal or library related&#xa;             schedules based on time and date.&#xa;             Scedules can only be seen by you and no any other user&#xa;             of the system.&#xa;&#xa;              Notes&#xa;              These are notes or points you wish to reach to the entire&#xa;              system users. they may be book suggestions, meetings&#xa;              or any other relevant points to other users that may be&#xa;              deemed as &quot;not important&quot; to &quot;very urgent.&quot;"/>
               </Properties>
             </Component>
           </SubComponents>
