--- a/src/librarySystemcodes/EditBookListDialog.form
+++ b/src/librarySystemcodes/EditBookListDialog.form
@@ -147,10 +147,13 @@
                                   <Component id="jLabel8" min="-2" max="-2" attributes="0"/>
                                   <EmptySpace max="-2" attributes="0"/>
                                   <Group type="103" groupAlignment="0" attributes="0">
-                                      <Component id="jLabel10" min="-2" max="-2" attributes="0"/>
                                       <Component id="comboEditLoanType" min="-2" pref="169" max="-2" attributes="0"/>
                                       <Component id="comboCondition" alignment="0" min="-2" pref="86" max="-2" attributes="0"/>
                                   </Group>
+                                  <EmptySpace min="-2" pref="108" max="-2" attributes="0"/>
+                              </Group>
+                              <Group type="102" alignment="1" attributes="0">
+                                  <Component id="jLabel10" min="-2" max="-2" attributes="0"/>
                                   <EmptySpace min="-2" pref="108" max="-2" attributes="0"/>
                               </Group>
                           </Group>
@@ -399,7 +402,7 @@
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel10">
           <Properties>
-            <Property name="text" type="java.lang.String" value="Force borrowed condition :"/>
+            <Property name="text" type="java.lang.String" value="Force borrowed condition (Optional):"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JComboBox" name="comboCondition">
