checking for server connection

--- a/src/librarySystemcodes/AboutLib.form
+++ b/src/librarySystemcodes/AboutLib.form
@@ -86,7 +86,7 @@
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="sansserif" size="12" style="1"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="About the Library Management System"/>
+            <Property name="text" type="java.lang.String" value="About the Library Management System (Version 2.1.6)"/>
           </Properties>
         </Component>
         <Container class="javax.swing.JScrollPane" name="jScrollPane1">
